syntax = "proto3";

package person;
option java_package = "br.com.joaovq.crm";
option java_multiple_files = true;
option java_outer_classname = "PersonProto";
import "google/protobuf/empty.proto";

message CreatePersonRequest {
  string name = 2;
}
message DeletePersonRequest {
  int32 id = 1;
}

message PersonRequest {
  optional int32 id = 1;
  optional string name = 2;
}
message PersonListResponse {
  repeated PersonResponse persons = 1;
}

message PersonResponse {
  int32 id = 1;
  string name = 2;
}

service PersonService {
  rpc getPersons(google.protobuf.Empty) returns (PersonListResponse) {}
  rpc createPerson(CreatePersonRequest) returns (PersonResponse) {}
  rpc deletePerson(DeletePersonRequest) returns (PersonResponse) {}
  rpc getStreamPersons(PersonRequest) returns (stream PersonResponse) {}
}